<resources>
    <string name="app_name">VIT-X</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="add_post">Add Post</string>
    <string name="alumni">Alumni</string>
    <string name="profile">Profile</string>
    <string name="event_image">Event Image</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="branch">Branch</string>
    <string name="programme">Programme</string>
    <string name="name">Name</string>
    <string name="linkedin_url">Linkedin URL</string>
    <string name="passout_year">Passout Year</string>
    <string name="full_name">Full Name</string>
    <string name="select_image">Select Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="linkedin">Linkedin</string>
    <string name="mail">Mail</string>
    <string name="landing_page_head">WELCOME TO\nVIT-X</string>
    <string name="landing_page_body">Get ready to be connected with\nevery alumni of VIT Bhopal University</string>
    <string name="landing_page_registration_text1">Haven\'t registered yet?</string>
    <string name="landing_page_registration_text2">Register now</string>
    <string name="logout">Logout</string>
    <string name="description">Description</string>
    <string name="image_for_post">Image for post</string>
    <string name="alumni_profile">Alumni Profile</string>
    <string name="registration_number">Registration Number</string>
    <string name="not_verified_message">You will be verified by the college soon.</string>
    <string name="ic_not_verified">not verified logo</string>
    <string name="delete_post">Delete Post</string>
</resources>