<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    style="?attr/materialCardViewFilledStyle">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/alumniDisplayPicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/user_profile_picture" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alumniName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/alumniCollegeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/alumniLinkedinBtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_linkedin"
            android:layout_margin="10dp"
            android:contentDescription="@string/linkedin" />

        <ImageView
            android:id="@+id/alumniEmailBtn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_gmail"
            android:layout_margin="10dp"
            android:contentDescription="@string/mail" />

    </LinearLayout>


</LinearLayout>


</com.google.android.material.card.MaterialCardView>